# mcmc-triangulation

./: .gitignore  eigen_visualizer.py  ellipse_visualizer.py  experiments.py  frustum_visualizer.py  general_utils.py  geometry_utils.py  image_utils.py  large_angles.txt  large_covariances.txt  main.py  requirements.txt  small_angles.txt  small_covariances.txt
source_clouds/: asc_to_ply.py
src/: CMakeLists.txt  metropolis.cpp
